# Wally

./: .gitignore  CMakeLists.txt  LICENSE  README.md  TODO.md  benchmark.py  egor.py  test.py  test.wall  test.wally
benchmarks/fib/: fib.wally
include/: chunk.h  colors.h  common.h  compiler.h  debug.h  main.h  memory.h  object.h  pretty_printer.h  scanner.h  table.h  token_printer.h  value.h  vm.h
include/data/: chunk.h  value.h
include/data_structs/: array.h  ast_tree.h  chunk.h  list.h  object.h  table.h  value.h
include/debug/: allocation_logger.h  disassembler.h  gc_logger.h  native_error.h
include/emitter/: emitter.h  environment.h
include/memory/: garbage_collector.h  memory.h
include/misc/: colors.h  common.h
include/parser/: ast_tree.h  compiler.h  parser.h
include/preprocessor/: preprocessor.h
include/scanner/: scanner.h
include/std/: core.h  native_utils.h  wally_list.h  wally_math.h  wally_os.h  wally_random.h
include/vm/: vm.h
scripts/apps/: pong.wally  rock-paper-scissors.wally
scripts/tests/data_manipulation/: lists.wally  string_manipulation.wally
scripts/tests/expressions/: binary.wally  logical.wally  sugar.wally  ternary.wally
scripts/tests/functions/: call.wally  local_functions.wally  return.wally  scope.wally
scripts/tests/libs/: listlib.wally  math.wally
scripts/tests/oop/: inheritance.wally  init.wally  methods.wally
scripts/tests/statements/: break.wally  for.wally  if.wally  switch.wally
src/: chunk.c  compiler.c  debug.c  main.c  memory.c  object.c  pretty_printer.c  scanner.c  table.c  token_printer.c  value.c  vm.c
src/data/: value.c
src/data_structs/: array.c  ast_tree.c  chunk.c  list.c  object.c  table.c  value.c
src/debug/: allocation_logger.c  disassembler.c  gc_logger.c  native_error.c  token_printer.c
src/emitter/: emitter.c  environment.c
src/memory/: garbage_collector.c  memory.c
src/misc/: colors.c
src/parser/: ast_tree.c  compiler.c  old_compiler.c  parser.c
src/preprocessor/: preprocessor.c
src/scanner/: scanner.c
src/std/: core.c  native_utils.c  wally_list.c  wally_math.c  wally_os.c  wally_random.c
src/vm/: vm.c
tests/: test.wall
tests/data/: string_manipulation.wally  variables.wally
tests/data_manipulation/: variables.wally
tests/expressions/: binary.wally  logical.wally  sugar.wally  ternary.wally
tests/functions/: call.wally  closures.wally  param.wally  return.wally
tests/jump/: continue.wally  logical.wally  while.wally
tests/oop/: base.wally  this.wally
tests/statements/: continue.wally  for.wally  switch.wally  while.wally
